# bookggle

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  bookggle.xcf  view.json
src/: dice.c  game_logic.c  game_state.c  i18n.c  i18n_strings_en.c  i18n_strings_fr.c  input.c  main.c  ruleset.c  ruleset_en_4x4.c  ruleset_en_5x5.c  ruleset_fr_4x4.c  ruleset_fr_5x5.c  screen_game.c  screen_mode_select.c  screen_multi_end.c  timer.c  ui_fonts.c
src/include/: dice.h  game_logic.h  game_state.h  i18n.h  input.h  ruleset.h  screen_game.h  screen_mode_select.h  screen_multi_end.h  timer.h  ui_fonts.h
tests/: Makefile  README.md  test_dice.c  test_flow.c  test_flow_5x5.c  test_game_over_blink.c  test_game_start_dice.c  test_i18n.c  test_ruleset.c  test_timer_refresh.c
tests/stub/: inkview.h  inkview_stub.c  stub_hooks.h
